force-app/main/default/objects/Leave_Accrued_Mapping__mdt/Leave_Accrued_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Leave Accrued Mapping</label>
    <pluralLabel>Leave Accured Mapping</pluralLabel>
</CustomObject>