force-app/main/default/objects/Leave_Accrued_Mapping__mdt/fields/Is_Lessthan_15_Days__c.field-meta.xml
<CustomField>
    <fullName>Is_Lessthan_15_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lessthan 15 Days</label>
    <type>Checkbox</type>
</CustomField>