force-app/main/default/objects/Leave_Accrued_Mapping__mdt/fields/Joining_Month__c.field-meta.xml
<CustomField>
    <fullName>Joining_Month__c</fullName>
    <label>Joining Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>