force-app/main/default/objects/Leave_Accrued_Mapping__mdt/fields/Leaves_Credits__c.field-meta.xml
<CustomField>
    <fullName>Leaves_Credits__c</fullName>
    <label>Leaves Credits</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>