force-app/main/default/objects/Leave_Accrued_Mapping__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Is_Lessthan_15_Days__c</columns>
    <columns>Joining_Month__c</columns>
    <columns>Leaves_Credits__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>